--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,4 +1,6 @@
 <resources>
   <string name="app_name">ShyNote</string>
   <string name="action_settings">Settings</string>
+  <string name="edit_message">Enter A Message</string>
+  <string name="button_send">Send</string>
 </resources>
