--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -2,5 +2,6 @@
   <string name="app_name">ShyNote</string>
   <string name="action_settings">Settings</string>
   <string name="edit_message">Enter A Message</string>
-  <string name="button_send">Send</string>
+  <string name="button_send">Show Message</string>
+    <string name="title_activity_display_message">DisplayMessageActivity</string>
 </resources>
